runFormatTest(import.meta, ["glimmer"]);
runFormatTest(import.meta, ["glimmer"], { embeddedLanguageFormatting: "off" });
